--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </nav>
         </header>
         
-        <!--Jumbotron-->
-        <section>
-            <div>
+        <!--Hero-->
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today!</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
 
