--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
 
                 <form>
                     <label for="name">Enter Full Name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name" />             
+                    <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
+
                     <label for="email">Enter email address:</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email" />
+                    <input class="form-input" type="email" placeholder="Email Address" name="email" id="email" />
+
                     <label for="phone">Enter a telephone number:</label>
-                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                    <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone" />
+
                     <p>
                         Have you worked out with a trainer before?
                         <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -54,10 +57,12 @@
                         <input type="radio" name="trainer-confirm" id="trainer-no" />
                         <label for="trainer-no">No</label>
                     </p>
+
                     <p>
                         <label for="age">I acknowlege that I am at least 18 years of age.</label>
                         <input type="checkbox" name="age-confirm" id="age" />
                     </p>
+
                     <button type="submit">Get running!</button>
                 </form>
             </div>
