--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,7 +12,7 @@
     <!--Nav-->
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="./">RUN BUDDY</a>
         </h1>
        
         <nav>
